// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly with extra props 1`] = `
<fieldset
  className="uui-horizontal-direction root container"
>
  <label
    className="container uui-checkbox-container root size-18 theme-light mode-form color-sky uui-disabled"
    tabIndex={-1}
  >
    <div
      className="uui-checkbox"
    >
      <input
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        tabIndex={-1}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      test1
    </div>
  </label>
  <label
    className="container uui-checkbox-container root size-18 theme-light mode-form color-sky uui-disabled"
    tabIndex={-1}
  >
    <div
      className="uui-checkbox uui-checked"
    >
      <input
        aria-disabled={true}
        checked={true}
        disabled={true}
        onChange={[Function]}
        tabIndex={-1}
        type="checkbox"
      />
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="uui-input-label"
    >
      test2
    </div>
  </label>
</fieldset>
`;

exports[`CheckboxGroup should render with default props 1`] = `
<fieldset
  className="uui-vertical-direction root container"
>
  <label
    className="container uui-checkbox-container root size-18 theme-light mode-form color-sky -clickable"
    tabIndex={-1}
  >
    <div
      className="uui-checkbox uui-checked"
    >
      <input
        checked={true}
        onChange={[Function]}
        tabIndex={0}
        type="checkbox"
      />
      <div
        className="container uui-icon uui-enabled"
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </div>
    <div
      className="uui-input-label"
    >
      test1
    </div>
  </label>
  <label
    className="container uui-checkbox-container root size-18 theme-light mode-form color-sky -clickable"
    tabIndex={-1}
  >
    <div
      className="uui-checkbox"
    >
      <input
        checked={false}
        onChange={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <div
      className="uui-input-label"
    >
      test2
    </div>
  </label>
</fieldset>
`;
